--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,73 @@
-*, *:before, *:after {
-  box-sizing: border-box;
+*,
+*:before,
+*:after {
+   box-sizing: border-box;
+}
+
+body {
+   background-color: rgba(0, 0, 0, 0.456);
+   margin: 0;
 }
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  height: 200px;
-  margin: 0 auto;
+   display: flex;
+   align-items: center;
+   justify-content: space-evenly;
+   width: 100%;
+   height: 100%;
+   padding: 5px;
+}
+
+#info {
+   color: white;
 }
 
 .square,
 #start {
-  width: 200px;
-  height: 200px;
-  background-color: aqua;
+   width: 200px;
+   height: 200px;
+   background-color: aqua;
 }
 
 #start {
-  margin-top: 600px;
-  background-color: gray;
+   margin-top: 150px;
+   background-color: gray;
 }
 
+.score {
+   display: flex;
+   width: 200px;
+   height: 200px;
+   margin-top: 150px;
+   background-color: darkolivegreen;
+}
 
 .red {
-  background-color: red;
+   background-color: red;
 }
 
 .yellow {
-  background-color: yellow;
+   background-color: yellow;
 }
 
 .green {
-  background-color: green;
+   background-color: green;
 }
 
 .blue {
-  background-color: blue;
+   background-color: blue;
 }
 
 .pink {
-  background-color: pink;
+   background-color: pink;
 }
 
 .orange {
-  background-color: orange;
+   background-color: orange;
 }
 
 .aqua {
-  background-color: aqua;
+   background-color: aqua;
 }
 
-
 /*/////////ADD RWD/////////*/
-
-
-
-
-
-
-
-
