--- a/css/style.css
+++ b/css/style.css
@@ -87,4 +87,22 @@ body {
    background-color: aqua;
 }
 
+#loading {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: fixed;
+   background-color: black;
+   width: 100%;
+   height: 100%;
+   left: 0;
+   top: 0;
+   z-index: 100;
+}
+
+#loading p {
+   color: white;
+   font-size: 3em;
+}
+
 /*/////////ADD RWD/////////*/
