--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
    box-sizing: border-box;
 }
 
+:root {
+   --color: lightseagreen;
+}
+
 body {
-   background-color: rgba(0, 0, 0, 0.456);
+   background-color: #2e5e77;
    margin: 0;
 }
 
@@ -18,20 +22,66 @@ body {
    padding: 5px;
 }
 
+.container-top {
+   margin-top: 2rem;
+   flex-wrap: wrap;
+}
+
+.container-bottom {
+   margin-bottom: 2rem;
+}
+
 #info {
    color: white;
+   padding: 0.5rem;
+   max-width: 1000px;
+   text-align: center;
+   font-size: 1.5rem;
+   margin: 0;
+}
+
+.info-size {
+   height: 10rem;
+   margin-top: 3rem;
 }
 
 .square,
 #start {
-   width: 200px;
-   height: 200px;
-   background-color: aqua;
+   width: 120px;
+   height: 120px;
+   background-color: rgb(43, 134, 55);
+   border-radius: 1rem;
+   cursor: pointer;
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.square:focus,
+#start:focus {
+   outline: none;
+}
+
+.square {
+   border-color: var(--color);
+   margin: 0.5rem;
+}
+
+.square:hover {
+   box-shadow: 0px 0px 10px var(--color);
 }
 
 #start {
-   margin-top: 150px;
-   background-color: gray;
+   margin-top: 50px;
+   background-color: var(--color);
+   font-size: 1rem;
+}
+
+#start a {
+   text-decoration: none;
+   color: #000;
+}
+
+#start:hover {
+   box-shadow: 0px 0px 10px var(--color);
 }
 
 #level,
@@ -42,12 +92,16 @@ body {
 .board,
 #lives {
    display: flex;
-   width: 200px;
-   height: 200px;
+   width: 120px;
+   height: 190px;
    align-items: center;
    justify-content: space-evenly;
-   margin-top: 150px;
-   background-color: darkolivegreen;
+   flex-direction: column;
+   margin: 5px;
+   margin-top: 50px;
+   background-color: var(--color);
+   border-radius: 1rem;
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 #lives i {
@@ -126,8 +180,9 @@ body {
    transform: translate(-50%, -50%);
    background-color: white;
    padding: 1rem 1.5rem;
-   width: 24rem;
+   width: 15rem;
    border-radius: 0.5rem;
+   font-size: 0.5rem;
 }
 .close-button {
    float: right;
@@ -137,6 +192,7 @@ body {
    cursor: pointer;
    border-radius: 0.25rem;
    background-color: lightgray;
+   font-size: 1rem;
 }
 .close-button:hover {
    background-color: darkgray;
@@ -148,4 +204,24 @@ body {
    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
-/*/////////ADD RWD/////////*/
+/* RWD  */
+
+@media (min-width: 700px) {
+   .square,
+   #start {
+      width: 150px;
+      height: 150px;
+   }
+   .modal-content {
+      width: 30rem;
+      font-size: 1rem;
+   }
+}
+
+@media (min-width: 840px) {
+   .square,
+   #start {
+      width: 200px;
+      height: 200px;
+   }
+}
